syntax = "proto3";

option go_package = "../pb";

package pb;

service Kernel {
  rpc SendControlPkg (ControlRequest) returns (stream HelloReply) {}
}
// 发送控制码的包
message ControlRequest {
  // 控制码，别名CC
  uint32 ControlCode = 1;
  // 目标
  string TargetHost = 2;
  // 参数个数
  int32 ParamsNumber = 3;
  // 参数Key
  repeated string ParamKeys = 4;
  // 参数Value
  repeated string ParamValues = 5;
}

message HelloReply {
  uint32 CurrentPkgID = 1;
  uint32 TotalPkgNumber = 2;
  string TargetHost = 3;
  uint32 Type =4;
  string Asset = 5;
}

